--- a/CSS/Flex-Box-on-CSS/5.css
+++ b/CSS/Flex-Box-on-CSS/5.css
@@ -104,7 +104,7 @@ nav {
   gap: 25px;
   div {
     display: flex;
-    font-size: 21px;
+    font-size: 15px;
     padding-left: 10px;
     padding-right: 15px;
     align-items: center;
@@ -155,6 +155,7 @@ nav {
 .booking {
   display: flex;
   flex-direction: column;
+  margin-bottom: 10%;
   .booking-place {
     border: 2px solid #ddd;
     display: flex;
@@ -166,7 +167,7 @@ nav {
     .place-details,.destination {
       display: flex;
       .place-name{
-        font-size: x-large;
+        font-size: larger;
         font-weight: bold;
         color: #3c3c3c;
         cursor: pointer;
@@ -193,4 +194,20 @@ nav {
 .revert{
   content: url(./assets/from-to.png);
   cursor: pointer;
+}
+
+.train-search{
+  width: 92.5%;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  background-color: #01bb0a;
+  color: white;
+  font-size: larger;
+  font-weight: bolder;
+  text-align: center;
+  gap: 20px;
 }
